# LinuxExecutor

./: README.md
.github/workflows/: build.yml
oss-executor/: CMakeLists.txt  build.sh  config.json  run.sh
oss-executor/scripts/autoexec/: init.lua
oss-executor/src/: main.cpp
oss-executor/src/api/: closures.cpp  closures.hpp  environment.cpp  environment.hpp  quorum_api.cpp  quorum_api.hpp
oss-executor/src/core/: executor.cpp  executor.hpp  hooks.cpp  hooks.hpp  injection.cpp  injection.hpp  lua_engine.cpp  lua_engine.hpp  memory.cpp  memory.hpp  payload.cpp
oss-executor/src/scripting/: script_hub.cpp  script_hub.hpp  script_manager.cpp  script_manager.hpp
oss-executor/src/ui/: app.cpp  app.hpp  console.cpp  console.hpp  drawing_object.hpp  editor.cpp  editor.hpp  file_dialog.cpp  file_dialog.hpp  overlay.cpp  overlay.hpp  tabs.cpp  tabs.hpp  theme.cpp  theme.hpp
oss-executor/src/utils/: config.cpp  config.hpp  crypto.cpp  crypto.hpp  http.cpp  http.hpp  logger.cpp  logger.hpp
oss-executor/themes/: cyberpunk.json  dark.json  midnight.json
